RCApp: replaced deprecated HttpClient with HttpURLConnection